--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Miguel Rodríguez Bonhome, mrbonhome.com">
-    <meta name="description" content="React 17, Webpack 5.68 Boilerplate to help you bootstrap your own project.">
+    <meta name="description" content="React 18, Webpack 5 and Babel 7.">
 </head>
 
 <body>
