fixed sass dependencies, fixed webpack template

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
+  <head>
     <title>React 17, Webpack 5.68 Boilerplate</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Miguel Rodríguez Bonhome, mrbonhome.com">
-    <meta name="description" content="React 18, Webpack 5 and Babel 7.">
-</head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Miguel Rodríguez Bonhome, mrbonhome.com" />
+    <meta name="description" content="React 18, Webpack 5 and Babel 7." />
+  </head>
 
-<body>
+  <body>
     <div id="app"></div>
-    <script src="bundle.js"></script>
-</body>
-
+  </body>
 </html>
